--- a/src/boot/ksdk1.1.0/CMakeLists.txt
+++ b/src/boot/ksdk1.1.0/CMakeLists.txt
@@ -43,7 +43,7 @@ SET(CMAKE_ASM_FLAGS_RELEASE "${CMAKE_ASM_FLAGS_RELEASE} -mcpu=cortex-m0plus  -mt
 SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -mcpu=cortex-m0plus  -mthumb  -MMD  -MP  -Wall  -fno-common  -ffunction-sections  -fdata-sections  -ffreestanding  -fno-builtin  -Os  -mapcs  -std=gnu99 -fshort-enums")
 
 # RELEASE LD FLAGS
-SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} --specs=nano.specs  -lm  -Wall  -fno-common  -ffunction-sections  -fdata-sections  -ffreestanding  -fno-builtin  -Os  -mthumb  -mapcs  -Xlinker --gc-sections  -Xlinker -static  -Xlinker -z  -Xlinker muldefs  -Xlinker --defsym=__stack_size__=0x250  -Xlinker --defsym=__heap_size__=0x50")
+SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} --specs=nano.specs  -lm  -Wall  -fno-common  -ffunction-sections  -fdata-sections  -ffreestanding  -fno-builtin  -Os  -mthumb  -mapcs  -Xlinker --gc-sections  -Xlinker -static  -Xlinker -z  -Xlinker muldefs  -Xlinker --defsym=__stack_size__=0x200  -Xlinker --defsym=__heap_size__=0x100")
 
 # ASM MACRO
 SET(CMAKE_ASM_FLAGS_DEBUG "${CMAKE_ASM_FLAGS_DEBUG}  -DDEBUG")
@@ -89,20 +89,25 @@ ADD_EXECUTABLE(Warp
     "${ProjDirPath}/../../../../platform/startup/MKL03Z4/gcc/startup_MKL03Z4.S"
     "${ProjDirPath}/../../src/warp-kl03-ksdk1.1-boot.c"
     "${ProjDirPath}/../../src/warp-kl03-ksdk1.1-powermodes.c"
-    "${ProjDirPath}/../../src/devBMX055.c"
+    "${ProjDirPath}/../../src/arithmetic_propagation.h"
+    "${ProjDirPath}/../../src/arithmetic_propagation.c"
+#    "${ProjDirPath}/../../src/statistics.c"
+    "${ProjDirPath}/../../src/FFT.h"
+    "${ProjDirPath}/../../src/FFT.c"
+#    "${ProjDirPath}/../../src/devBMX055.c"
 #    "${ProjDirPath}/../../src/devADXL362.c"
     "${ProjDirPath}/../../src/devMMA8451Q.c"
 #    "${ProjDirPath}/../../src/devLPS25H.c"
-    "${ProjDirPath}/../../src/devHDC1000.c"
-    "${ProjDirPath}/../../src/devMAG3110.c"
+#    "${ProjDirPath}/../../src/devHDC1000.c"
+#    "${ProjDirPath}/../../src/devMAG3110.c"
 #    "${ProjDirPath}/../../src/devSI7021.c"
-    "${ProjDirPath}/../../src/devL3GD20H.c"
-    "${ProjDirPath}/../../src/devBME680.c"
+#    "${ProjDirPath}/../../src/devL3GD20H.c"
+#    "${ProjDirPath}/../../src/devBME680.c"
 #    "${ProjDirPath}/../../src/devTCS34725.c"
 #    "${ProjDirPath}/../../src/devSI4705.c"
-    "${ProjDirPath}/../../src/devCCS811.c"
-    "${ProjDirPath}/../../src/devAMG8834.c"
-    "${ProjDirPath}/../../src/devISL23415.c"
+#    "${ProjDirPath}/../../src/devCCS811.c"
+#    "${ProjDirPath}/../../src/devAMG8834.c"
+#    "${ProjDirPath}/../../src/devISL23415.c"
 #    "${ProjDirPath}/../../src/devRV8803C7.c"
 #    "${ProjDirPath}/../../src/devPAN1326.c"
 #    "${ProjDirPath}/../../src/devAS7262.c"
